feat: Human Digital Twin - Milestone 1 & 2
- Vite + React + Tailwind CSS v4 project setup
- React Three Fiber 3D scene with OrbitControls and lighting
- GLB human body model loading via Git LFS
- Zustand store for anatomical system visibility toggles
- 6 anatomical system toggles (Tegumentario, Scheletrico, Muscolare, Cardiovascolare, Nervoso, Organi)
- Heartbeat animation system (systole/diastole pulsation)
- Vital signs panel with BPM display
- Glassmorphism sidebar UI

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
 # ============================================
-# Fabbrica Agentica — Ignora TUTTO il framework
+# Fabbrica Agentica — Infrastructure (ignored)
 # ============================================
 
 # Virtual Environment
 .venv/
-
-# Node
-node_modules/
-package.json
-package-lock.json
 
 # Python cache
 __pycache__/
@@ -22,14 +17,14 @@ execution/
 gemini.md
 mcp_config.json
 
-# Setup scripts
+# Setup scripts (fabbrica)
 setup.sh
 force-mcp-setup.sh
 
 # Docker (fabbrica)
 Dockerfile
 
-# Requirements (fabbrica)
+# Requirements (fabbrica - Python)
 requirements.txt
 
 # Directives (fabbrica)
@@ -38,6 +33,13 @@ directives/
 # Fabbrica source files
 src/main.py
 src/__init__.py
+
+# ============================================
+# Standard ignores
+# ============================================
+
+# Node
+node_modules/
 
 # OS
 .DS_Store
@@ -53,3 +55,6 @@ Thumbs.db
 
 # Cache
 .cache/
+
+# Vite build output
+dist/
